--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ data/__pycache__/__init__.cpython-313.pyc
 *.pyc
 *.iml
 *.xml
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
+teste.csv
+Untitled.ipynb
