--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data/__pycache__/__init__.cpython-313.pyc
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 teste.csv
 Untitled.ipynb
+layout_milho_20250303121711.csv
